WIP and more impls...